Generic: type-checking and generate-cpp
Type checking need unit-test cases.
Make generic with modern-C++ temporarily.